# Yi

./: Cargo.toml  LICENSE  README.md  app.rc  build.rs
assets/: i18n.json  彝文部首字典.json  彝文音节字典.json
cpp-tsf/include/: tsf_service.h
cpp-tsf/src/: tsf_service.cpp
src/: app_state.rs  candidate_manager.rs  candidate_window.rs  conversion.rs  global_hook.rs  i18n.rs  ime.rs  input_handler.rs  lib.rs  main.rs  segmentation.rs  text_committer.rs  text_injector.rs  tray_icon.rs  tsf_bridge.rs  ui.rs
