[package]
name = "yi"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "yi-global"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi", 
    "shellapi",
    "libloaderapi",
    "winbase",
    "processthreadsapi",
    "memoryapi",
    "combaseapi",
    "objbase",
    "oleauto",
    "dwmapi",
    "winerror",
    "winnls"
]}

[build-dependencies]
cc = "1.0"
winres = "0.1"

# 添加这个配置
[target.'cfg(windows)'.bin]
name = "yi-global"
path = "src/main.rs"
